# j

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  install.sh
.claude/: settings.local.json
.codebuddy/commands/: write_readme.md
.github/workflows/: release.yml
assets/: help.md  system_prompt_default.md  version.md
docs/plans/: 2026-02-28-todo-list-and-add-subcommand.md
examples/: test_list.rs
openspec/changes/archive-chat-conversation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-25-archive-chat-conversation/: tasks.md
openspec/changes/archive/2026-02-25-archive-chat-conversation/specs/conversation-restore/: spec.md
openspec/changes/archive/2026-02-25-todo-preview-panel/: design.md  proposal.md  tasks.md
openspec/specs/conversation-archive/: spec.md
openspec/specs/todo-content-preview/: spec.md
patches/tui-textarea-0.7.0/src/: widget.rs
plugin/agent/code/: go.mod
plugin/ask/code/: go.mod  go.sum  main.go
plugin/md_render/code/: go.mod  go.sum  main.go
src/: assets.rs  cli.rs  constants.rs  interactive.rs  lib.rs  main.rs
src/command/: alias.rs  category.rs  chat.rs  handler.rs  list.rs  mod.rs  open.rs  report.rs  script.rs  system.rs  time.rs  todo.rs  voice.rs
src/command/chat/: api.rs  app.rs  archive.rs  handler.rs  markdown.rs  mod.rs  model.rs  render.rs  skill.rs  theme.rs  tools.rs  ui.rs
src/command/chat/markdown/: highlight.rs  mod.rs  parser.rs
src/command/chat/ui/: archive.rs  chat.rs  config.rs  mod.rs
src/command/help/: app.rs  mod.rs  ui.rs
src/command/todo/: app.rs  mod.rs  ui.rs
src/config/: mod.rs  yaml_config.rs
src/interactive/: completer.rs  mod.rs  parser.rs  shell.rs
src/tui/: editor.rs
src/util/: fuzzy.rs  log.rs  md_render.rs  mod.rs  version_check.rs
