[package]
name = "j-cli"
version = "12.0.0"
edition = "2024"
authors = ["lingojack@qq.com"]
description = "A fast CLI tool for alias management, daily reports, and productivity"
license = "MIT"
repository = "https://github.com/yourusername/j"
homepage = "https://github.com/yourusername/j"
readme = "README.md"
keywords = ["cli", "alias", "productivity", "launcher"]
categories = ["command-line-utilities"]

[[bin]]
name = "j"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rustyline = "17.0.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = "0.4"
colored = "3"
dirs = "6"
url = "2"
indicatif = "0.18.3"
termimad = "0.34.1"
ratatui = "0.29.0"
crossterm = "0.28.0"
tui-textarea = "0.7"
