[package]
name = "j-cli"
version = "12.1.28"
edition = "2024"
rust-version = "1.93.1"
authors = ["lingojack@qq.com"]
description = "A fast CLI tool for alias management, daily reports, and productivity"
license = "MIT"
repository = "https://github.com/LingoJack/j"
homepage = "https://github.com/LingoJack/j"
readme = "README.md"
keywords = ["cli", "alias", "productivity", "launcher"]
categories = ["command-line-utilities"]

[[bin]]
name = "j"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rustyline = "17.0.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = "0.4"
colored = "3"
dirs = "6"
url = "2"
indicatif = "0.18.3"
termimad = "0.34.1"
ratatui = "0.29.0"
crossterm = "0.28.0"
tui-textarea = "0.7"
async-openai = { version = "0.33", default-features = false, features = ["chat-completion", "rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
pulldown-cmark = "0.13.0"
unicode-width = "0.2"
whisper-rs = "0.15"
cpal = "0.17"
libc = "0.2"

[patch.crates-io]
tui-textarea = { path = "patches/tui-textarea-0.7.0" }
